--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,13 +23,13 @@ if (flutterVersionName == null) {
 }
 
 android {
-    
     namespace "com.example.rehab_racers"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
+
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
@@ -65,12 +65,11 @@ flutter {
 }
 
 dependencies {
-  // Provides ARCore Session and related resources.
-    implementation 'com.google.ar:core:1.41.0'
+     implementation 'com.google.ar:core:1.41.0'
 
     // Provides ArFragment, and other UX resources.
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
 
     // Alternatively, use ArSceneView without the UX dependency.
-    implementation 'com.google.ar.sceneform:core:1.17.1'
+    implementation 'com.google.ar.sceneform:core:1.17.1'   
 }
