--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   sizer: ^2.0.15
-  arcore_flutter_plugin: ^0.1.0
+  arcore_flutter_plugin:
+    git:
+      url: https://github.com/giandifra/arcore_flutter_plugin
+      ref: android-upgrading
   
 dev_dependencies:
   flutter_test:
